findly-builder/src/app/scss/styles.scss
/* ... */
.tooltip{
    z-index: 10501 !important;
}
.mat-drawer-backdrop.mat-drawer-shown {
    background-color: rgba(0, 0, 0, 0.09);
}
.mainLoadingSpinner{
    position: absolute;
    top: 45%;
    left: 45%;
    background: transparent;
    width: 223px;
    height: 40px;
    padding-top: 10px;
    border-radius: 4px;
    opacity: 0.95;
    padding-left: 7% !important;
}
.manage-findlyion-exp-popup{   
    .mat-dialog-container{
        box-shadow: none !important;
    }
}
.cdk-overlay-dark-backdrop{
    background-color: rgba(0, 0, 0, 0.5);
}

/********* Scroll bar global css start *********************/
body::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    cursor: pointer;
  }
  ::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    cursor: pointer;
  }
  ::-webkit-scrollbar-thumb {
    background-color: #aaa;
    border-radius: 7px;
    transition: background-color 0.2s linear, width 0.2s ease-in-out;
    -webkit-transition: background-color 0.2s linear, width 0.2s ease-in-out;
  }
  /********* Scroll bar global css end *********************/

 
.live-chat-instructions-modal{
    .mat-dialog-container{
        overflow: hidden;
        box-shadow: none;
    }   
}
.loader-in-button{
    // border: 2px solid $borderColor;
    border-radius: 50%;
    // border-top: 2px solid $btnHoverColor;
    // width: 14px;
    // height: 14px;
    -webkit-animation: spin-in-button 1.5s linear infinite; /* Safari */
    animation: spin-in-button 1.5s linear infinite;
    display:block;
}
@-webkit-keyframes spin-in-button {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
}
  
@keyframes spin-in-button {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.success-message-notification{
    margin-left: 20px;
    font-size: 14px;                                           
    color: #09a624;
    img{
        margin-right: 12px;
    }
}
.error-message-notification{
    margin-left: 20px;
    font-size: 14px;                                           
    color: $warningRed;
    img{
        margin-right: 12px;
    }
}

@media (max-width: 1200px){
    html, body.mat-typography {
        overflow-y:hidden !important;
        overflow-x: auto !important;
        min-width: 1200px !important;
        width: 100% !important;
    }
}
@media (max-width: 600px){
    perfect-scrollbar{
        overflow: auto !important;
        position: relative !important;
        .ps{
            overflow: auto !important;
            position: relative !important;
        }
    }
    .save-action-btn{
        width: 1200px;
    }
    app-slider-component{
        .sliderComponent{
            .sliderDialogComponent {
                .sliderContent{
                    .sliderContainer{
                        &.width500{                            
                            &.callHistory{
                                float: right;
                                width: 90% !important;
                            }
                        }
                    }
                }
            }
        }
    }
    .modal-new-call-logs{
        width: 100% !important;
        max-width: 90% !important;
    }
    .manage-form-perfect-scrollbar{
        width: 400px;
    }
    .onboarding-container{
        .section-content{
            .submit_button{
                position: relative !important;
                margin: 20px 0;
                bottom: 0 !important;
            }
        }
    }
    .emptyStateContainer{
        .scrollContainer{
            .stepsContainer {
                .stepsGrayContainer{
                    height: auto !important;
                }
            }
        }
    }
}

.type_sort_dropdown{   
    width: auto;                                                
    .dropdown-open{                                
        .dropdown-input{
            font-size: 12px;           
            border: 0px solid transparent !important;
            background: transparent;
            border-radius: 4px;
            padding: 0;
            height: 16px;
            border: 0;
            line-height: 0;
            img{
                margin-right: 6px; // Need Clarity On Fixed Margin Values
                position: relative;
                top: -1px;
            }
            &::before{
                display: none;
            }
            &::after{
                display: none;
            }
        }        
    }
}
.divBlockEmptylastChild{
    display: none;
    text-align: center;
    width: 100%;
    padding: 10%;
    white-space: break-spaces;
}
div.divBlockEmptylastChild:first-child {
    display: block !important;
} 
.type_sort_dropdown-content{
    box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
    max-width: 200px;
    top: 3px !important;
    min-width: 140px;
    padding: 10px 0px;
    border: 0;        
    margin: 8px 0 0 0;
    li{
        font-size: 13px;
        color: #202124;
        padding: 8px 20px;
        cursor: pointer;
        position: relative;
        .list-name{
            display: inline-block;
            white-space: nowrap;
            text-overflow: ellipsis;
            max-width: 100%;
            overflow: hidden;
            padding-right: 10px;
        }
        img{
            float: right;
            top: 11px;
            position: absolute;
            right: 10px;
        }
        &:hover{
            background: #EFF0F1;
        }
    }
}
/* ... */

